Update title of my contract role.

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         <div class="card">
             <div class="job-header">
                 <div>
-                    <h3 class="job-title">SQA Contractor</h3>
+                    <h3 class="job-title">Quality Assurance Analyst (Contract)</h3>
                     <p class="company">Berkshire Grey, Bedford, MA</p>
                 </div>
                 <span class="date">January 2021 – November 2021</span>
