--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: clamp(0.5rem, 2vw, 1.5rem);
-            padding: 0 1rem;
+            gap: clamp(0.2rem, 1.5vw, 1.5rem);
+            padding: 0 0.5rem;
             flex-wrap: nowrap;
             margin: 0 auto;
             max-width: 100%;
@@ -132,8 +132,8 @@
             font-weight: 500;
             transition: all 0.3s ease;
             position: relative;
-            padding: 0.4rem clamp(0.4rem, 1.5vw, 0.8rem);
-            font-size: clamp(0.75rem, 2vw, 0.95rem);
+            padding: 0.4rem clamp(0.3rem, 1vw, 0.8rem);
+            font-size: clamp(0.7rem, 1.8vw, 0.95rem);
             letter-spacing: 0.5px;
             white-space: nowrap;
         }
@@ -166,12 +166,13 @@
             }
             
             nav ul {
-                gap: 0.25rem;
-                padding: 0 0.5rem;
+                gap: 0.1rem;
+                padding: 0 0.25rem;
             }
             
             nav a {
                 letter-spacing: 0;
+                padding: 0.3rem 0.25rem;
             }
         }
 
