--- a/index.html
+++ b/index.html
@@ -911,9 +911,7 @@
                 <div class="tech-stack">
                     <h4>Technologies Used:</h4>
                     <div class="project-tech-tags">
-                        <span class="project-tech-tag">JavaScript</span>
-                        <span class="project-tech-tag">HTML5</span>
-                        <span class="project-tech-tag">CSS3</span>
+                        <span class="project-tech-tag">Kotlin</span>
                         <span class="project-tech-tag">Local Storage</span>
                         <span class="project-tech-tag">Game Development</span>
                     </div>
