--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
             <!-- Interactive Resume Project -->
             <div class="project-card">
                 <div class="project-header">
-                    <div class="project-icon">IR</div>
+                    <div class="project-icon"></div>
                     <h3 class="project-title">Interactive Resume</h3>
                 </div>
                 
@@ -888,7 +888,7 @@
             <!-- Eschaton Deck Tracker Project -->
             <div class="project-card">
                 <div class="project-header">
-                    <div class="project-icon">EDT</div>
+                    <div class="project-icon"></div>
                     <h3 class="project-title">Eschaton Deck Tracker</h3>
                 </div>
                 
